fixed spacing issues

--- a/css/mdb.css
+++ b/css/mdb.css
@@ -5277,12 +5277,8 @@ a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]
 body {
   font-family: 'Avenir', sans-serif;
   font-weight: 300;
-  background-image: url('../img/code.png');
-  background-repeat: repeat-y;
-  background-attachment: fixed;
-  background-size: 100% 100%;
   color: white;
-
+  
 }
 
 h1,
